<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TableLayout
            android:layout_width="346dp"
            android:layout_height="399dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.489" app:layout_constraintVertical_bias="0.835"
            android:id="@+id/tableLayout" android:onClick="onClick">

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <Button
                    android:text="@string/button7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/btnSeven" android:layout_weight="1"
                    android:textSize="18sp"/>
            <Button
                    android:text="@string/button8"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/btnEight" android:layout_weight="1"
                    android:textSize="18sp"/>
            <Button
                    android:text="@string/button9"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/btnNine" android:layout_weight="1"
                    android:textSize="18sp"/>
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <Button
                    android:text="@string/button4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/btnFour" android:layout_weight="1"
                    android:textSize="18sp"/>
            <Button
                    android:text="@string/button5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/btnFive" android:layout_weight="1"
                    android:textSize="18sp"/>
            <Button
                    android:text="@string/button6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/btnSix" android:layout_weight="1"
                    android:textSize="18sp"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <Button
                    android:text="@string/button1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/btnOne" android:layout_weight="1"
                    android:textSize="18sp"/>
            <Button
                    android:text="@string/button2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/btnTwo" android:layout_weight="1"
                    android:textSize="18sp"/>
            <Button
                    android:text="@string/button3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/btnThree" android:layout_weight="1"
                    android:textSize="18sp"/>
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/btnCA" android:layout_weight="1"
                    android:textSize="18sp" android:text="@string/buttonCA"/>
            <Button
                    android:text="@string/button0"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/btnZero" android:layout_weight="1"
                    android:textSize="18sp"/>
            <Button
                    android:text="@string/buttonDel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/btnDel" android:layout_weight="1"
                    android:textSize="18sp"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <Button
                    android:text="@string/buttonPer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/btnPercent" android:layout_weight="1"
                    android:textSize="18sp"/>
            <Button
                    android:text="@string/buttonPoi"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/btnPoint" android:layout_weight="1"
                    android:textSize="18sp"/>
            <Button
                    android:text="@string/buttonRs"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/btnSub" android:layout_weight="1"
                    android:textSize="18sp"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <Button
                    android:text="@string/buttonDi"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/btnDivide" android:layout_weight="1"
                    android:textSize="18sp"/>
            <Button
                    android:text="@string/buttonMl"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/btnMul" android:layout_weight="1"
                    android:textSize="18sp"/>
            <Button
                    android:text="@string/buttonSm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/btnSum" android:layout_weight="1"
                    android:textSize="18sp"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <Button
                    android:text="@string/buttonEgu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/btnEqual" android:layout_weight="3"
                    android:textSize="18sp"/>
        </TableRow>
    </TableLayout>
    <EditText
            android:layout_width="357dp"
            android:layout_height="133dp"
            android:inputType="numberSigned"
            android:ems="10"
            android:id="@+id/tvNumber" android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/tableLayout" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp" android:hint="@string/tv"
            android:textSize="70sp" android:textStyle="bold" android:textAlignment="viewEnd"/>

</androidx.constraintlayout.widget.ConstraintLayout>